--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # SITE CONFIGURATION
-url: ""
-baseurl: ""
+url: "hanaedonnelly.github.io"
+baseurl: "WildestDreams"
 
 # THEME-SPECIFIC CONFIGURATION
 title: Wildest Dreams
