Remove baseurl from configuration
Removed baseurl configuration from site settings.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # SITE CONFIGURATION
 url: "wildestdreamstribute.com"
-baseurl: "WildestDreams"
+baseurl: ""
 
 # THEME-SPECIFIC CONFIGURATION
 title: Wildest Dreams
