Social icons updates

--- a/_data/icons.yml
+++ b/_data/icons.yml
@@ -9,11 +9,11 @@ flickr:
 github: sylhare
 gitlab:
 google-scholar:   # e.g. "WXAAOb0AAAAJ"
-instagram:
+instagram:        
 hacker-news:
 keybase:
 linkedin:
-mail:             # e.g. "sam@mail.com"
+mail:             "wildestdreamstribute@gmail.com"
 map:              # e.g. "34.0886/-118.3191"
 mastodon:         # e.g. "fostodon.org/@sam"
 matrix:           # e.g. "@sam:matrix.org"
